--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
     "start": "nodemon ./src/server/index.ts",
     "test": "jest",
     "build": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "test:1": "SET /A BUG_ID=1 && jest",
+    "test:2": "SET /A BUG_ID=2 && jest",
+    "test:3": "SET /A BUG_ID=3 && jest",
+    "test:4": "SET /A BUG_ID=4 && jest",
+    "test:5": "SET /A BUG_ID=5 && jest",
+    "test:6": "SET /A BUG_ID=6 && jest",
+    "test:7": "SET /A BUG_ID=7 && jest",
+    "test:8": "SET /A BUG_ID=8 && jest",
+    "test:9": "SET /A BUG_ID=9 && jest",
+    "test:10": "SET /A BUG_ID=10 && jest"
   },
   "dependencies": {
     "@bem-react/classname": "^1.6.0",
@@ -27,7 +37,9 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@jest/globals": "^29.3.1",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.2.4",
     "@types/mini-css-extract-plugin": "^2.5.0",
@@ -37,6 +49,7 @@
     "@types/react-helmet": "^6.1.11",
     "@types/webpack": "^5.28.5",
     "css-loader": "^7.1.2",
+    "html-reporter": "^10.3.2",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -45,6 +58,7 @@
     "sass": "^1.77.4",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
+    "testplane": "^8.15.0",
     "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
